[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/channels/voice_channel_item.gd" id="1"]

[node name="VoiceChannelItem" type="VBoxContainer"]
offset_right = 220.0
offset_bottom = 44.0
theme_override_constants/separation = 0
script = ExtResource("1")

[node name="ChannelButton" type="Button" parent="."]
layout_mode = 2
custom_minimum_size = Vector2(0, 44)
flat = true
alignment = 0

[node name="HBox" type="HBoxContainer" parent="ChannelButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="TypeIcon" type="TextureRect" parent="ChannelButton/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(20, 20)
size_flags_vertical = 4
stretch_mode = 5

[node name="ChannelName" type="Label" parent="ChannelButton/HBox"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="UserCount" type="Label" parent="ChannelButton/HBox"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.58, 0.608, 0.643, 1)

[node name="ParticipantContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0
